hphp/test/slow/unserialize-invalid-dynamic-prop-name/slow-private-empty.php.expectf
Fatal error: Cannot access empty property in %s/slow-private-empty.php on line 7
